--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-url: "http://archive.infoculture.ru"
+url: "http://ruarxive.org"
 baseurl: ""
 
 # Of course don't forget to change the username and projectname to YOUR username and project
