--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "archive.infoculture.ru"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "ruarxive.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
